fix: general css caused horizontal scroll on divs dynamically added by extensions

--- a/src/app/styles/base/base.css
+++ b/src/app/styles/base/base.css
@@ -10,7 +10,7 @@ body {
   font-family: system-ui, sans-serif;
 }
 
-body>* {
+body div:first-child>* {
   width: min(100%, var(--max-width));
   margin-left: auto;
   margin-right: auto;
